--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@wordpress/eslint-plugin": "^17.10.0",
 		"@wordpress/scripts": "^27.5.0",
 		"babel-loader": "^9.1.3",
+		"postcss-import": "^16.1.0",
 		"webpack": "^5.90.3",
 		"webpack-cli": "^5.1.4"
 	},
