--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,9 @@
 	"require-dev": {
 		"brianhenryie/strauss": "^0.15.0",
 		"squizlabs/php_codesniffer": "^3.7",
-		"wp-coding-standards/wpcs": "^3.0"
+		"wp-coding-standards/wpcs": "^3.0",
+		"phpunit/phpunit": "^10.5",
+		"brain/monkey": "^2.6"
 	},
 	"extra": {
 		"strauss": {
