--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "verdantstudio/wp-beacon",
 	"description": "Synchronize your sites metrics to a no-code databases",
-	"type": "project",
+	"type": "wordpress-plugin",
 	"scripts": {
 		"phpcs": "./vendor/squizlabs/php_codesniffer/bin/phpcs",
 		"phpcbf": "phpcbf",
@@ -15,7 +15,8 @@
 		],
 		"strauss": [
 			"vendor/bin/strauss"
-		]
+		],
+		"unit": "./vendor/bin/phpunit --colors=always"
 	},
 	"autoload": {
 		"psr-4": {
@@ -29,12 +30,15 @@
 	},
 	"require": {
 		"php-di/php-di": "^6.0",
-		"doctrine/annotations": "^1.13"
+		"doctrine/annotations": "^1.13",
+		"ext-json": "*"
 	},
 	"require-dev": {
 		"brianhenryie/strauss": "^0.15.0",
 		"squizlabs/php_codesniffer": "^3.7",
-		"wp-coding-standards/wpcs": "^3.0"
+		"wp-coding-standards/wpcs": "^3.0",
+		"phpunit/phpunit": "^10.5",
+		"brain/monkey": "^2.6"
 	},
 	"extra": {
 		"strauss": {
